--- a/dashboard.html
+++ b/dashboard.html
@@ -658,7 +658,7 @@ function renderDashboard(){
   // Active clients
   document.getElementById('d-clients').innerHTML = clients.length===0
     ? empty('No clients yet')
-    : clients.slice(0,5).map(c=>{const jobTotal=jobs.filter(j=>j.client_id==c.id).reduce((s,j)=>s+(j.amount||0),0);return`<div class="c-row"><div class="c-av">${c.name.substring(0,2).toUpperCase()}</div><div style="flex:1;min-width:0"><div class="c-name">${c.name}</div><div class="c-meta">${c.courts||1} court${(c.courts||1)!==1?'s':''} · ${c.location||'—'}</div></div><div style="font-size:13px;font-weight:700;color:var(--charcoal)">$${jobTotal.toLocaleString()}</div></div>`;}).join('');
+    : clients.slice(0,5).map(c=>{const jobTotal=jobs.filter(j=>j.client_id==c.id||(j.clients&&j.clients.name===c.name)).reduce((s,j)=>s+(j.amount||0),0);return`<div class="c-row"><div class="c-av">${c.name.substring(0,2).toUpperCase()}</div><div style="flex:1;min-width:0"><div class="c-name">${c.name}</div><div class="c-meta">${c.courts||1} court${(c.courts||1)!==1?'s':''} · ${c.location||'—'}</div></div><div style="font-size:13px;font-weight:700;color:var(--charcoal)">$${jobTotal.toLocaleString()}</div></div>`;}).join('');
 
   // Recently completed jobs
   const completed = jobs.filter(j=>j.status==='completed').slice(0,4);
@@ -687,11 +687,11 @@ function renderClients(){
     clients.map(c=>`<tr>
       <td><div style="display:flex;align-items:center;gap:10px"><div class="c-av" style="width:30px;height:30px;font-size:11px;flex-shrink:0">${c.name.substring(0,2).toUpperCase()}</div><strong>${c.name}</strong></div></td>
       <td>${c.location||'—'}</td><td>${stag(c.surface)}</td><td>${c.courts||1}</td>
-      <td><strong>$${jobs.filter(j=>j.client_id==c.id).reduce((s,j)=>s+(j.amount||0),0).toLocaleString()}</strong></td>
+      <td><strong>$${jobs.filter(j=>j.client_id==c.id||(j.clients&&j.clients.name===c.name)).reduce((s,j)=>s+(j.amount||0),0).toLocaleString()}</strong></td>
       <td><div class="row-actions"><button class="act-btn act-edit" onclick="editClient('${c.id}')">Edit</button><button class="act-btn act-delete" onclick="confirmDelete('client','${c.id}','${c.name.replace(/'/g,"\'")}')">Delete</button></div></td>
     </tr>`).join('')+`</tbody></table>`;
   const cards=clients.map(c=>`<div class="m-card">
-    <div class="m-card-top"><div class="m-card-name">${c.name}</div><div class="m-card-amount">$${jobs.filter(j=>j.client_id==c.id).reduce((s,j)=>s+(j.amount||0),0).toLocaleString()}</div></div>
+    <div class="m-card-top"><div class="m-card-name">${c.name}</div><div class="m-card-amount">$${jobs.filter(j=>j.client_id==c.id||(j.clients&&j.clients.name===c.name)).reduce((s,j)=>s+(j.amount||0),0).toLocaleString()}</div></div>
     <div class="m-card-meta">${c.location||'—'} · ${c.courts||1} court${(c.courts||1)!==1?'s':''}</div>
     <div class="m-card-tags">${stag(c.surface)}</div>
     <div class="m-card-actions"><button class="act-btn act-edit" onclick="editClient('${c.id}')">Edit</button><button class="act-btn act-delete" onclick="confirmDelete('client','${c.id}','${c.name.replace(/'/g,"\'")}')">Delete</button></div>
@@ -1005,24 +1005,30 @@ function closeConfirm(){document.getElementById('confirm-overlay').style.display
 async function doDelete(){
   const{type,id}=pendingDelete;
   closeConfirm();
+  // Optimistically remove from local state immediately
   if(type==='client'){
-    // Delete related jobs and invoices first, then the client
+    clients=clients.filter(x=>x.id!=id);
+    jobs=jobs.filter(x=>x.client_id!=id);
+    invoices=invoices.filter(x=>x.client_id!=id);
+    document.getElementById('nb-clients').textContent=clients.length;
+  } else if(type==='job'){
+    jobs=jobs.filter(x=>x.id!=id);
+  } else {
+    invoices=invoices.filter(x=>x.id!=id);
+    document.getElementById('nb-invoices').textContent=invoices.filter(i=>i.status==='pending').length;
+  }
+  renderClients();renderJobs();renderInvoices();renderDashboard();
+  toast('Deleted','ok');
+  // Now delete from database in background
+  if(type==='client'){
     await sb.from('jobs').delete().eq('client_id',id);
     await sb.from('invoices').delete().eq('client_id',id);
-    const{error}=await sb.from('clients').delete().eq('id',id);
-    if(error){toast('Error: '+error.message,'err');return;}
-    await Promise.all([loadClients(),loadJobs(),loadInvoices()]);
+    await sb.from('clients').delete().eq('id',id);
   } else if(type==='job'){
-    const{error}=await sb.from('jobs').delete().eq('id',id);
-    if(error){toast('Error: '+error.message,'err');return;}
-    await loadJobs();renderClients();
+    await sb.from('jobs').delete().eq('id',id);
   } else {
-    const{error}=await sb.from('invoices').delete().eq('id',id);
-    if(error){toast('Error: '+error.message,'err');return;}
-    await loadInvoices();
+    await sb.from('invoices').delete().eq('id',id);
   }
-  toast('Deleted','ok');
-  renderDashboard();
 }
 
 // ── MODALS ──
