--- a/dashboard.html
+++ b/dashboard.html
@@ -96,7 +96,7 @@ body{font-family:'DM Sans',sans-serif;background:var(--off);color:var(--text);mi
 .overlay.open{display:flex}
 .modal{background:white;border-radius:20px 20px 0 0;padding:24px 20px 32px;width:100%;max-width:520px;max-height:90vh;overflow-y:auto}
 .modal-title{font-family:‘Barlow Condensed’,sans-serif;font-size:22px;font-weight:800;color:var(–charcoal);margin-bottom:4px}
-.modal-sub{font-size:12px;color:var(–lmuted);margin-bottom:16px}
+
 .fg{margin-bottom:12px}
 .fl{display:block;font-size:10px;font-weight:700;letter-spacing:0.5px;color:var(–lmuted);margin-bottom:4px;text-transform:uppercase}
 .fi{width:100%;padding:10px 14px;border:1.5px solid var(–border);border-radius:8px;font-family:‘DM Sans’,sans-serif;font-size:15px;color:var(–charcoal);outline:none;transition:border-color .2s;background:var(–off);-webkit-appearance:none}
@@ -314,7 +314,7 @@ body{font-family:'DM Sans',sans-serif;background:var(--off);color:var(--text);mi
 </div>
 </div>
 
-<!-- QUICK ADD MODAL -->
+<!-- QUICK ADD MODAL v5 -->
 
 <div class="overlay" id="m-client">
   <div class="modal">
