--- a/dashboard.html
+++ b/dashboard.html
@@ -99,8 +99,11 @@ body{font-family:'DM Sans',sans-serif;background:var(--off);color:var(--text);mi
 
 .fg{margin-bottom:12px}
 .fl{display:block;font-size:10px;font-weight:700;letter-spacing:0.5px;color:var(–lmuted);margin-bottom:4px;text-transform:uppercase}
-.fi{width:100%;padding:10px 14px;border:1.5px solid var(–border);border-radius:8px;font-family:‘DM Sans’,sans-serif;font-size:15px;color:var(–charcoal);outline:none;transition:border-color .2s;background:var(–off);-webkit-appearance:none}
-.fi:focus{border-color:var(–green);background:white}
+.fi{width:100%;padding:10px 14px;border:1.5px solid var(–border);border-radius:8px;font-family:‘DM Sans’,sans-serif;font-size:15px;color:var(–charcoal);outline:none;transition:border-color .2s;background:var(–off);-webkit-appearance:none;-webkit-text-fill-color:var(–charcoal)}
+.fi:focus{border-color:var(–green);background:white;-webkit-text-fill-color:var(–charcoal)}
+input[type=date].fi{color:var(–charcoal);-webkit-text-fill-color:var(–charcoal)}
+select.fi{color:var(–charcoal);-webkit-text-fill-color:var(–charcoal)}
+select.fi option{color:var(–charcoal)}
 .fi::placeholder{color:#C8D0C2}
 .modal-btns{display:flex;gap:10px;margin-top:18px}
 .modal-btns button{flex:1;padding:13px;border-radius:8px;font-family:‘DM Sans’,sans-serif;font-size:14px;font-weight:600;cursor:pointer;border:none;transition:all .2s}
